--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-safe-area-context": "^4.2.5",
-    "react-native-screens": "^3.13.1"
+    "react-native-screens": "^3.13.1",
+    "react-redux": "^8.1.1",
+    "redux": "^4.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
