--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^0.27.2",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-redux": "^8.1.1",
