--- a/ios/AvivaWeather/Info.plist
+++ b/ios/AvivaWeather/Info.plist
@@ -36,7 +36,9 @@
 		</dict>
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
-	<string></string>
+	<string>AvivaWeather requires access to your location for the weather condition</string>
+	<key>NSLocationAlwaysAndWhenInUseUsageDescription</key>
+	<string>AvivaWeather requires access to your location for the weather condition</string>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
 	<key>UIRequiredDeviceCapabilities</key>
