--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
     "axios": "^0.27.2",
     "react": "18.2.0",
     "react-native": "0.72.1",
+    "react-native-geocoding": "^0.5.0",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
     "react-redux": "^8.1.1",
-    "redux": "^4.2.1"
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
