--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-geocoding": "^0.5.0",
+    "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.2.5",
     "react-native-screens": "^3.13.1",
