--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "test": "jest"
   },
   "dependencies": {
-    "@react-native-community/geolocation": "^3.0.6",
     "@react-navigation/native": "^6.0.10",
     "@react-navigation/native-stack": "^6.6.2",
     "axios": "^0.27.2",
     "react": "18.2.0",
     "react-native": "0.72.1",
     "react-native-geocoding": "^0.5.0",
+    "react-native-geolocation-service": "^5.3.1",
     "react-native-google-places-autocomplete": "^2.5.1",
     "react-native-linear-gradient": "^2.7.3",
     "react-native-safe-area-context": "^4.2.5",
